k8s/platform/leaderboard-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboard-api
  namespace: platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: leaderboard-api
  template:
    metadata:
      labels:
        app: leaderboard-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: /metrics
    spec:
      containers:
        - name: leaderboard-api
          image: leaderboard-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
